Minor configuration changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,8 +6,8 @@ sds.master.password = 72b302bf297a228a75730123efef7c41
 #cabbage
 sds.secure.password = b3188adab3f07e66582bbac456dcd212
 
-# set this via the start.bat command -Dsds.url=https://cgb04072/secure/
-# sds.url="https://cgb04072/secure/"
+# override this via the start.bat command -Dsds.url=https://cgb04072/secure/
+sds.url="https://cgb04072/secure/"
 
 # Secret key
 # ~~~~~
